[package]
name = "twilio-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6" }
dotenvy = "0.15"
serde = { version = "1", features = [ "derive" ] }
serde-xml-rs = "0.6"
tokio = { version = "1", features = [ "fs", "macros", "rt-multi-thread" ] }
tokio-util = { version = "0.7", features = [ "io" ] }
