[package]
name = "twilio-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6", features = [ "ws" ] }
base64 = "0.21"
dotenvy = "0.15"
futures-util = { version = "0.3", features = [ "sink" ] }
gcs-common = { package = "async-google-apis-common", version = "0.4" }
hound = "3"
hyper = { version = "0.14", features = ["stream"] }
hyper-rustls = { version = "0.23", features = [ "http2", "rustls-native-certs" ] }
quick-xml = "0.22"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tokio = { version = "1", features = [ "fs", "macros", "rt-multi-thread", "sync", "time" ] }
tokio-util = { version = "0.7", features = [ "io" ] }
xmlserde = "0.5"
xmlserde_derives = "0.5"
